--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ img{
 }
 
 
-@media screen and (min-width: 376px) and (max-width: 1440px) {
+@media screen and (min-width: 376px){
 
     .card{
         
